# TicketShield

./: README.md
anchor/: Anchor.toml
anchor/programs/ticketshield/: Cargo.toml
anchor/programs/ticketshield/src/: errors.rs  lib.rs
anchor/programs/ticketshield/src/instructions/: buy_listed_ticket.rs  cancel_listing.rs  create_event.rs  list_ticket.rs  mod.rs  purchase_ticket.rs
anchor/programs/ticketshield/src/state/: event.rs  listing.rs  mod.rs
anchor/tests/: ticketshield.ts
frontend/: index.html  package.json
frontend/src/: App.tsx  main.tsx
frontend/src/components/: TicketCard.tsx  TransactionToast.tsx  WalletConnect.tsx
frontend/src/hooks/: useEventData.ts  useProgram.ts
frontend/src/idl/: ticketshield.json
frontend/src/pages/: CreateEvent.tsx  EventPage.tsx  Home.tsx  MyTickets.tsx  ResaleMarket.tsx  Transparency.tsx
frontend/src/utils/: constants.ts
