[package]
name = "ticketshield"
version = "0.1.0"
description = "Anti-scalping ticket protocol on Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "ticketshield"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.32.0", features = ["init-if-needed"] }
anchor-spl = { version = "0.32.0", features = ["token", "associated_token", "mint"] }
